appId: com.violen.prospekt_essens_planer.prospekt_essens_planer
---
- launchApp
# Handle tutorial if visible
- runFlow:
    when:
        visible: "ÜBERSPRINGEN"
    commands:
        - tapOn: "ÜBERSPRINGEN"
- tapOn: "Import.*"
- tapOn: "Test Samples verarbeiten"
- tapOn: "Kaufland Prospekt"
- extendedWaitUntil:
    visible: ".*Angebote erkannt."
    timeout: 60000
- takeScreenshot: "maestro/screenshots/kaufland_sample_results"
